# employee-manager

./: .gitignore  DEPLOYMENT.md  EXTERNAL_CONFIG.md  GITHUB_ACTIONS_SETUP.md  INSTALL_VS_BUILDTOOLS_NOW.txt  MSI_BUILD_GUIDE.md  MSI_INSTALLER_SOLUTION.md  QUICK_MSI_SETUP.md  README.md  SETUP_MSI_BUILD_ENVIRONMENT.md  WINDOWS_DEPLOYMENT.md  WINDOWS_QUICK_START.md  build-client.sh  build-msi-basic.ps1  build-msi-simple.ps1  build-msi.ps1  build-windows-msi.bat  build-windows-msi.sh  complete-msi-setup.ps1  demo-setup.sh  deploy-server.sh  deploy-windows-client.bat  deploy-windows-client.ps1  docker-compose.yml  install-rust-windows.ps1  install-vs-buildtools.ps1  nginx.conf  run-msi-setup.bat  setup-codesigning.sh  setup-external-config.bat  setup-external-config.sh  setup-github-actions.sh  setup-msi-environment.ps1  setup-notarization.sh
.github/workflows/: build-msi.yml  build-windows-msi.yml  windows-msi.yml
employee-manager/: config.json  package-lock.json  package.json
employee-manager/src/: App.tsx  index.css
employee-manager/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
employee-manager/src-tauri/icons/: icon.icns
employee-manager/src-tauri/src/: main.rs
employee-manager/src/components/: ConfirmDialog.tsx  Dashboard.tsx  EmployeeCard.tsx  EmployeeForm.tsx  EmployeeList.tsx  EnhancedEmployeeList.tsx  EnterpriseEmployeeTable.tsx  InteractiveDashboard.tsx  LoadingSkeleton.tsx  (+5 more)
server/: Dockerfile  README.md  database.sqlite  deploy.bat  deploy.sh  package-lock.json  package.json
server/src/: generateLargeDataset.js  index.js  initDb.js
(+5 files in other folders)
